--- a/Proyecto/css/styles.css
+++ b/Proyecto/css/styles.css
@@ -184,7 +184,7 @@ font-size: 30px;
   border-radius: 70%;
 }
 #about-info .info-left{
-  float:left;
+  float:center;
   width: 50%;
   min-height: 100%;
 }
